--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -15,7 +15,8 @@
         align-content: center;
         img {
             width: 40px;
-            margin-left: 5px;
+            height: 40px;
+            margin: 5px;
         }
     }
     .nav-list li {
